--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --navbar-width: 8dvh;
 }
+
 body {
   background-color: black;
   color: white;
+  margin: 0;
+  padding: 0;
+  height: calc(100dvh - var(--navbar-width));
+  margin-top: var(--navbar-width);
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
