--- a/src/components/styles/intro.css
+++ b/src/components/styles/intro.css
@@ -69,6 +69,7 @@
   height: 70%;
   object-fit: contain;
   z-index: 10;
+  animation: dp-zoom 2s var(--pre-delay) forwards;
 }
 
 #back-name-div,
@@ -79,17 +80,19 @@
   align-items: center;
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 50%;
   font-size: 80px;
   color: rgba(128, 128, 128, 0.5);
 }
 
 #back-intro-text {
-  bottom: 5%;
+  width: max-content;
+  top: 60%;
+  animation: typing 0.8s var(--pre-delay) alternate infinite;
 }
 
 #back-name-div {
-  top: 20%;
+  top: 10%;
 }
 
 #back-name-right,
@@ -104,12 +107,52 @@
 
 #back-name-right {
   justify-content: start;
+  animation: name-left-shift 2s var(--pre-delay) forwards;
 }
 
 #back-name-left {
   justify-content: end;
+  animation: name-right-shift 2s var(--pre-delay) forwards;
 }
 
 #back-name-spacer {
   width: 10%;
+}
+
+@keyframes name-left-shift {
+  0% {
+    transform: translateX(50%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes name-right-shift {
+  0% {
+    transform: translateX(-50%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes dp-zoom {
+  0% {
+    transform: scale(0.7);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes typing {
+  0% {
+    border-right: solid 1px white;
+  }
+  100% {
+    border-right: solid 1px rgba(255, 255, 255, 0);
+  }
 }
