--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,27 +1,27 @@
-
 #navbar {
-	display: flex;
-	width: 100%;
-	height: var(--navbar-width);
-	position: fixed;
-	top: 0;
-	background-color: black;
-	justify-content: space-between;
-	align-items: center;
-	border: solid 1px white;
-	z-index: 100;
+  display: flex;
+  width: 100%;
+  height: var(--navbar-width);
+  position: fixed;
+  top: 0;
+  background-color: black;
+  justify-content: space-between;
+  align-items: center;
+  /* border: solid 1px white; */
+  z-index: 20;
 }
 
-#nav-main, #nav-side {
-	display: flex;
-	width: 50%;
-	height: 100%;
-	justify-content: left;
-	align-items: center;
+#nav-main,
+#nav-side {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  justify-content: left;
+  align-items: center;
 }
 
 #nav-side {
-	justify-content: right;
+  justify-content: right;
 }
 
 .nav-links {
