--- a/src/components/styles/intro.css
+++ b/src/components/styles/intro.css
@@ -28,7 +28,8 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(black, rgb(20, 20, 20));
+  background-image: linear-gradient(black, rgb(28, 28, 28));
+  scroll-snap-align: center;
 }
 
 #intro-div {
@@ -81,14 +82,21 @@
   position: absolute;
   width: 100%;
   height: 50%;
-  font-size: 80px;
+  font-size: 64px;
   color: rgba(128, 128, 128, 0.5);
 }
 
 #back-intro-text {
   width: max-content;
-  top: 60%;
+  top: 55%;
   animation: typing 0.8s var(--pre-delay) alternate infinite;
+}
+
+#front-intro-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 #back-name-div {
@@ -103,6 +111,7 @@
   align-items: center;
   height: 100%;
   width: 30%;
+  font-size: 88px;
 }
 
 #back-name-right {
