--- a/src/components/styles/preload.css
+++ b/src/components/styles/preload.css
@@ -2,10 +2,11 @@
   display: flex;
   height: 100dvh;
   width: 100%;
-  top: calc(var(--navbar-width) * -1);
+  top: 0;
+  left: 0;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 30;
   overflow: hidden;
   backdrop-filter: blur(8px);
