--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   -moz-osx-font-smoothing: grayscale;
   --navbar-width: 8dvh;
   --pre-delay: 2s;
+  --main-back-color: rgb(28, 28, 28);
 }
 
 body {
@@ -21,4 +22,19 @@ body {
   height: 100%;
   position: relative;
   z-index: 1;
+  scroll-snap-type: y proximity;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(10, 10, 10);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(70, 70, 70);
+  border-radius: 20px;
 }
