--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -12,7 +12,7 @@
 }
 
 #nav-main,
-#nav-side {
+.nav-side {
   display: flex;
   width: 50%;
   height: 100%;
@@ -20,18 +20,76 @@
   align-items: center;
 }
 
-#nav-side {
+.nav-side {
   justify-content: right;
 }
 
-.nav-links {
+.nav-links,
+#nav-ham {
   display: flex;
-  padding: 0 20px;
+  margin: 0 4%;
   height: 100%;
   justify-content: center;
   align-items: center;
 }
 
+.side-links {
+  min-width: max-content;
+}
+
 .nav-links:hover {
   cursor: pointer;
+}
+
+#nav-ham {
+  display: none;
+  aspect-ratio: 1/1;
+}
+
+#ham-icon {
+  width: 80%;
+  height: 80%;
+}
+
+@media screen and (width <= 700px) {
+  #nav-ham {
+    display: flex;
+  }
+
+  .side-links {
+    padding: 8% 0%;
+    width: 100%;
+    border: none;
+    border-radius: 6px;
+  }
+
+  .side-links:hover {
+    background-color: rgb(56, 56, 56);
+    cursor: pointer;
+  }
+
+  .nav-side {
+    position: fixed;
+    right: 0;
+    top: 0;
+    flex-direction: column;
+    width: max-content;
+    min-height: var(--navbar-width);
+    height: max-content;
+    justify-content: center;
+  }
+
+  .nav-side-links {
+    background-color: rgb(80, 80, 80);
+    border: none;
+    border-bottom-left-radius: 6px;
+    border-top-left-radius: 6px;
+    min-width: max-content;
+    width: 25%;
+    margin-top: var(--navbar-width);
+  }
+
+  .nav-side-links > div {
+    flex: 1;
+  }
 }
