--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100%;
   height: 20%;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   background-color: black;
 }
 
