--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -20,8 +20,16 @@
 #social-names {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: start;
   width: 20%;
   height: 100%;
+}
+
+#social-names > a{
+  color: white;
+}
+
+#social-names > a:hover{
+  cursor: pointer;
 }
