--- a/src/components/socials/socials.css
+++ b/src/components/socials/socials.css
@@ -28,3 +28,16 @@
   max-width: 50%;
   max-height: 20%;
 }
+
+.social-div > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: calc(100% / 3);
+}
+
+.footer-socials > a {
+  width: 100%;
+  height: calc(100% / 3);
+}
